[tool.poetry]
name = "aoss-qa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aoss_qa"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["openai"], version = "^0.0.240"}
unstructured = "^0.8.1"
opensearch-py = "^2.2.0"
boto3 = "^1.28.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
